# py_import_check

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  dev-requirements.txt  setup.cfg  setup.py
import_check/: __init__.py  dependency.py  import_check_configuration.py  main.py
import_checker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
source/import_check/: import_check_configuration.py  main.py
tests/integration_test/: test_check_all_files.py  test_main.py
tests/resources/configuration/: .import_check.toml
tests/resources/package_1/: code_1.py
tests/resources/package_2/: code_2.py
tests/resources/source/package_1/: code_1.py
tests/resources/source/package_2/: code_1.py  code_2.py
tests/unit_tests/: test_check_dependencies.py  test_configuration.py  test_dependency.py  test_extract_module.py
