# setup.cfg
[metadata]
name = import checker
description = checks the imports of a module
version = 0.1.0
author = Jürgen Hahn
author_email = mail.jhahn@gmail.com
license = MIT
url = https://jorgealvarado.me

[options]
packages = find:

[options.entry_points]
console_scripts =
    import-check = import_check.main:main
