# setup.cfg
[metadata]
name = import check
description = checks for forbidden imports in a module
version = 0.0.1
author = Jürgen Hahn
author_email = mail.jhahn@gmail.com
license = MIT

[options]
packages = find:
install_requires=
    toml
    loguru

[options.entry_points]
console_scripts =
    import-check = import_check.main:main
